task(frontend) : updating dependancies for security reasons espacially high vulnerability for next js

--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name toolbox.collectif5050.com api-toolbox.collectif5050.com www.toolbox.collectif5050.com www.api-toolbox.collectif5050.com cinestats5050.fr www.cinestats5050.fr api.cinestats5050.fr www.api.cinestats5050.fr;
+    server_name cinestats5050.fr www.cinestats5050.fr api.cinestats5050.fr www.api.cinestats5050.fr;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
